codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_ski.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› /ski                                                      "
"                                                            "
"                                                            "
"  /skills  use skills to improve how the assistant performs "
"           tasks                                            "
